# core_for_store

./: .env.example  README.md  constants.py  main.py  pyproject.toml
htmlcov/: index.html
src/: base_product.py  cat_iterator.py  category.py  lawn_grass.py  print_mixin.py  product.py  smartphone.py
tests/: conftest.py  test_cat_iterator.py  test_category.py  test_lawn_grass.py  test_print_mixin.py  test_product.py  test_smartphone.py
